syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "github.com/DIMO-Network/device-definitions-api/pkg/grpc";

package grpc;

message DecodeVinRequest {
  string vin = 1;
  string country = 2;
  string known_model = 3;
  int32 known_year = 4;
}

message DecodeVinResponse {
  string device_make_id = 1 [deprecated=true];
  string device_style_id = 3;
  int32 year = 4;
  string source = 5;
  string powertrain = 6;
  string new_trx_hash = 8;
  // new human readable tableland id
  string definition_id = 9;
  string model = 10;
  string manufacturer = 11;
}

message UpsertDecodingRequest {
  string vin = 1;
  string target_definition_id = 2;
}

service VinDecoderService {
  rpc DecodeVin(DecodeVinRequest) returns (DecodeVinResponse);
  // used to change what a vin points to or insert a new vin to definition id mapping
  rpc UpsertDecoding(UpsertDecodingRequest) returns (google.protobuf.Empty);
}
